syntax = "proto3";
option java_multiple_files = true;
option java_package = "ru.stepanoff.auth";
option java_outer_classname = "AuthProto";

message AuthRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  bool canBeAuth = 1;
}

service AuthService {
  rpc canUserBeAuth(AuthRequest) returns (AuthResponse);
}